# Djrill

./: .gitignore  README.rst  pyproject.toml  requirements.txt  runtests.py  setup.py  tox.ini
djrill/tests/: mock_backend.py  test_mandrill_integration.py  test_mandrill_send.py  test_mandrill_webhook.py
docs/: conf.py  contributing.rst
docs/usage/: webhooks.rst
