[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "djrill"
dynamic = ["version", "readme"]
description = 'Mandrill transactional email for Django'
keywords = ["django", "mailchimp", "mandrill", "email", "email backend"]
authors = [{ name = "Kenneth Love", email = "kenneth@brack3t.com" }, { name = "Chris Jones", email = "chris@brack3t.com" }]
urls.source = "https://github.com/brack3t/Djrill/"
license.file = "LICENSE"
requires-python = ">=3.8"
dependencies = ["requests>=2.32", "django>=4.0"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Environment :: Web Environment",
    "Development Status :: 7 - Inactive",
]

[tool.setuptools]
packages = ["djrill", "djrill.mail", "djrill.mail.backends"]

[tool.setuptools.dynamic]
version = { attr = "djrill._version.__version__" }
